# GameEngineCPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Ecs/: CMakeLists.txt  ComponentPool.hpp  Ecs.hpp  Scene.hpp  SceneView.hpp  functions.hpp
Engine/: CMakeLists.txt
Engine/header/: Camera.hpp  Layer.hpp  MouseCode.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexBufferLayout.hpp  definitions.hpp  pch.hpp
Engine/header/Ecs/: ComponentPool.hpp  Ecs.hpp  Registry.hpp  SceneView.hpp  functions.hpp
Engine/header/Events/: KeyEvent.hpp
Engine/header/Math/: Random.hpp
Engine/header/ModelLoader/: Mesh.hpp  ModelLoader.hpp
Engine/header/Scene/: Entity.hpp  Scene.hpp
Engine/header/Scene/BaseComponents/: DirectionalLightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  MeshRendererComponent.hpp  PointLightComponent.hpp  SpotLightComponent.hpp  TagComponent.hpp  TransformComponent.hpp
Engine/header/Shader/: ShaderBuilder.cpp  ShaderBuilder.hpp
Engine/header/main/: TestLayer.hpp
Engine/lib/entt/: CMakeLists.txt  entt.hpp
Engine/src/: App.cpp  Camera.cpp  IndexBuffer.cpp  Layer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Engine/src/Events/: ApplicationEvent.cpp  EventDispatcher.cpp  KeyEvent.cpp  MouseEvent.cpp
Engine/src/Math/: Random.cpp
Engine/src/ModelLoader/: Mesh.cpp  ModelLoader.cpp
Engine/src/Scene/: Entity.cpp  Scene.cpp
Engine/src/Scene/BaseComponents/: DirectionalLightComponent.cpp  MaterialComponent.cpp  MeshRendererComponent.cpp  PointLightComponent.cpp
Engine/src/main/: Application.cpp  TestLayer.cpp
GameEngine/Header/: GameEngine.hpp  stb_image.h
GameEngine/Header/Rendering/: IRenderingEngine.hpp
GameEngine/Header/Rendering/Rasterization/: RasterizationEngine.hpp
GameEngine/Header/Rendering/Renderer/: IRenderer.hpp  IWindow.hpp
GameEngine/Header/Rendering/Renderer/OpenGL33/: OpenGL33Renderer.hpp  OpenGL33Window.hpp  OpenGl33Window.hpp
GameEngine/Header/Shader/: Shader.hpp
GameEngine/Source/: CMakeLists.txt  GameEngine.cpp  main.cpp
GameEngine/Source/Rendering/: IRenderingEngine.cpp
GameEngine/Source/Rendering/Rasterization/: RasterizationEngine.cpp
GameEngine/Source/Rendering/Renderer/: IRenderer.cpp  IWindow.cpp
GameEngine/Source/Rendering/Renderer/OpenGL33/: OpenGL33Renderer.cpp  OpenGL33Window.cpp  OpenGl33Window.cpp
GameEngine/Source/Shader/: Shader.cpp
GameEngine/Source/Shader/Files/: fragment.glsl  vertex.glsl
Sandbox/: CMakeLists.txt  LightLayer.cpp  LightLayer.hpp  TestLayer.cpp  TestLayer.hpp  main.cpp
Sandbox/EcsTest/: main.cpp
Sandbox/modelLoader/: ModelLoaderLayer.cpp  ModelLoaderLayer.hpp
Sandbox/res/shaders/: fragment.glsl
Sandbox/res/shaders/light/lightsource/: fragment.glsl  vertex.glsl
Sandbox/res/shaders/light/normal/: fragment.glsl  vertex.glsl
Sandbox/res/shaders/material/: fragment.glsl  vertex.glsl
Sandbox/res/shaders/modelLoader/: vertex.glsl
header/: App.hpp  IndexBuffer.hpp  KeyCode.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.hpp
header/Events/: ApplicationEvent.hpp  Event.hpp  EventDispatcher.hpp  MouseEvent.hpp
header/main/: TestLayer.hpp
res/shaders/: fragment.glsl  vertex.glsl
src/: App.cpp  Application.cpp  Camera.cpp  Camera.hpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/Events/: Event.cpp
src/main/: Application.cpp  TestLayer.cpp
